--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
             .chatbot-btn {
                 position: fixed;
-                bottom: 70px;
+                bottom: 85px;
                 right: 20px;
                 background-color: #343a40;
                 color: white;
@@ -121,7 +121,7 @@
                         We are delighted to invite you to our engagement ceremony and would be honored by your gracious presence. Please join us to celebrate this special occasion and bless us with your love and good wishes.
                     </p>                
                 </div>
-                <div class="text-end mb-3 pe-3">
+                <div class="mb-3 pe-3">
                     <a href="images/Invitation.jpg" style="text-decoration: none;" download>
                         <i class="bi bi-download"></i> Click here to download
                     </a>
