--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
             .chatbot-btn {
                 position: fixed;
-                bottom: 85px;
+                bottom: 80px;
                 right: 20px;
                 background-color: #343a40;
                 color: white;
@@ -118,15 +118,18 @@
                 <div class="container">
                     <span id="get-details-section-name"></span><br>
                     <p style="text-align: justify; text-indent: 50px;">
-                        We are delighted to invite you to our engagement ceremony and would be honored by your gracious presence. Please join us to celebrate this special occasion and bless us with your love and good wishes.
+                        We are delighted to invite you to our <strong> engagement and wedding </strong> ceremonies. 
+                        Your presence at both these special events would be an honor and a blessing to us. 
+                        Please join us as we celebrate the beginning of our new journey together, starting with the engagement ceremony, 
+                        followed by the wedding. We look forward to your gracious presence and your love and good wishes during these joyous occasions.
                     </p>                
                 </div>
-                <div class="mb-3 pe-3">
+                <div class="mb-3 ps-3">
                     <a href="images/Invitation.jpg" style="text-decoration: none;" download>
                         <i class="bi bi-download"></i> Click here to download
                     </a>
                 </div>
-                <div class="container text-center">
+                <div class="container text-center mt-5 mb-4">
                     <button class="btn btn-dark" onclick="showDetails()" >Get Details</button>
                     <div class="mt-3" id="details-output"></div>
                 </div>
