--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                     <h5 class="card-title">Weding Details</h5>
                                     <table class="table table-bordered">
                                         <tr>
-                                            <th>Engagement of</th>
+                                            <th>Wedding of</th>
                                             <td>Devanand Malaiya & Ankita Verma</td>
                                         </tr>
                                         <tr>
