--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </section>
             
             <!-- chat section Button -->
-            <div id="chatbot-btn" class="chatbot-btn">
+            <div id="chatbot-btn" class="container chatbot-btn">
                 <i class="bi bi-chat-square-text"></i>
             </div>
 
