--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         followed by the wedding. We look forward to your gracious presence and your love and good wishes during these joyous occasions.
                     </p>                
                 </div>
-                <div class="mb-3 ps-3">
+                <div class="container mb-3 ps-3">
                     <a href="images/Invitation.jpg" style="text-decoration: none;" download>
                         <i class="bi bi-download"></i> Click here to download
                     </a>
@@ -136,7 +136,7 @@
             </section>
             
             <!-- chat section Button -->
-            <div id="chatbot-btn" class="container chatbot-btn">
+            <div id="chatbot-btn" class="chatbot-btn">
                 <i class="bi bi-chat-square-text"></i>
             </div>
 
