--- a/index.html
+++ b/index.html
@@ -250,7 +250,6 @@
                                             <td>At. Post Silpati, Betul, Madhya Pradesh 460440</td>
                                         </tr>
                                     </table>
-                                    <p class="mt-3 text-success fw-bold">We look forward to seeing you there!</p>
                                 </div>
                             </div>
                         </div>
@@ -277,11 +276,15 @@
                                             <td>At. Post Silpati, Betul, Madhya Pradesh 460440</td>
                                         </tr>
                                     </table>
-                                    <p class="mt-3 text-success fw-bold">We look forward to seeing you there!</p>
                                 </div>
                             </div>
                         </div>
                         
+                    </div>
+                    <div class="row mt-4 justify-content-center">
+                        <div class="col-md-12 mb-3">
+                            <p class="mt-3 text-success fw-bold">We look forward to seeing you there!</p>
+                        </div>
                     </div>
                     <div class="row mt-4 justify-content-center">
                         <div class="col-md-12 mb-3">
